--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,7 @@
 body{
     background-color: #333;
-    color: #fff;
+    color: rgb(255, 255, 255);
 }
 h1{
-    font-size: 3em;
+    font-size: 30em;
 }
