--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,5 +3,14 @@ body{
     color: rgb(255, 255, 255);
 }
 h1{
-    font-size: 5em;
+    font-size: 15px;
 }
+.footer {
+    position: absolute; /* Фиксированное положение */
+    flex: 0 0 auto;
+    left: 0; bottom: 0; /* Левый нижний угол */
+    padding: 10px; /* Поля вокруг текста */
+    background: rgb(41, 41, 41); /* Цвет фона */
+    color: #fff; /* Цвет текста */
+    width: 100%; /* Ширина слоя */
+   }
