--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,7 +10,7 @@ h1{
     flex: 0 0 auto;
     left: 0; bottom: 0; /* Левый нижний угол */
     padding: 15px; /* Поля вокруг текста */
-    background: rgb(41, 41, 41); /* Цвет фона */
-    color: #fff; /* Цвет текста */
+    background: rgb(255, 255, 255); /* Цвет фона */
+    color: #333333; /* Цвет текста */
     width: 100%; /* Ширина слоя */
    }
