--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,16 +1,19 @@
-body{
+body {
     background-color: #333;
     color: rgb(255, 255, 255);
 }
-h1{
+
+h1 {
     font-size: 15px;
 }
+
 .footer {
-    position: absolute; 
+    position: absolute;
     flex: 0 0 auto;
-    left: 0; bottom: 0; 
-    padding: 15px; 
-    background: rgb(255, 255, 255); 
-    color: #333333; 
-    width: 98.4%; 
-   }
+    left: 0;
+    bottom: 0;
+    padding: 15px;
+    background: rgb(255, 255, 255);
+    color: #333333;
+    width: 98.4%;
+}
